force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppointmentDate__c</fullName>
    <label>Appointment Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppointmentDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>