force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__AppointmentEndTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppointmentEndTime__c</fullName>
    <label>Appointment End Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppointmentEndTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>