force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__AppointmentStartTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppointmentStartTime__c</fullName>
    <label>Appointment Start Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppointmentStartTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>