force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__InPersonMeeting_VisitId_map_Visit_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__InPersonMeeting_VisitId_map_Visit_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InPersonMeeting_VisitId_map_Visit_Id_N_1</label>
    <referenceTo>ssot__Visit__dlm</referenceTo>
    <relationshipLabel>InPersonMeeting_VisitId_map_Visit_Id_N_1</relationshipLabel>
    <relationshipName>InPersonMeeting_VisitId_map_Visit_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>