force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__rel_1719819733755_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819733755_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InPersonMeeting_ChannelEngagementId__rel</label>
    <referenceTo>ssot__ChannelEngagement__dlm</referenceTo>
    <relationshipLabel>InPersonMeeting_ChannelEngagementId__rel</relationshipLabel>
    <relationshipName>rel_1719819733755_end</relationshipName>
    <type>Lookup</type>
</CustomField>