force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__rel_1723128549217_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128549217_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InPersonMeeting_LocationID_map_Locat_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>InPersonMeeting_LocationID_map_Locat_rel</relationshipLabel>
    <relationshipName>rel_1723128549217_end</relationshipName>
    <type>Lookup</type>
</CustomField>