force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__StatusRemarksText__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatusRemarksText__c</fullName>
    <label>Status Remarks</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatusRemarksText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>