force-app/main/default/objects/ssot__InPersonMeeting__dlm/fields/ssot__VisitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VisitId__c</fullName>
    <label>Visit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VisitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>